--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -28,6 +28,8 @@ jobs:
       run: |
         mkdir -p database
         touch database/database.sqlite
+    - name: Install Node dependencies
+      run: npm install
     - name: Build assets
       run: npm run build
     - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
