--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
         "tailwindcss": "^3.2.1",
         "vite": "^6.2.4",
         "vue": "^3.4.0"
+    },
+    "dependencies": {
+        "sass": "^1.89.2"
     }
 }
